Material not updated in Cycles viewport render when made single user (while rendering with OptiX?) #85926

Closed
opened 2021-02-23 19:12:03 +01:00 by Hyesung · 8 comments

System Information:
Operating system: Windows 10
Graphics card: Nvidia Geforce RTX 2080Ti

Blender Version:
Broken: Blender 2.93.0-420f538fadfd-windows64
Worked: Blender-2.92.0rc-windows64

Short description of error:
Material not updated in viewport render of Cycles when made a single user (while rendering with OptiX?)

Exact steps for others to reproduce the error:

  1. Create a new scene and change the render engine to Cycles (and change compute device to GPU Compute/OptiX?)
  2. Select the default cube and duplicate it a few times (Shift + D and move it).
  3. Enter rendered viewport mode.
  4. Select one of the cubes, and navigate to the Material Properties tab in the Properties window and click on the Make single user button.
    image.png
  5. Attempt to change the materiel by doing something like change it's colour. Notice how this is NOT reflected in the viewport. This is not the case with older versions of Blender.

Here is a screen recording of the issue.
material bug.mp4

**System Information:** Operating system: Windows 10 Graphics card: Nvidia Geforce RTX 2080Ti **Blender Version:** Broken: Blender 2.93.0-420f538fadfd-windows64 Worked: Blender-2.92.0rc-windows64 **Short description of error:** Material not updated in viewport render of Cycles when made a single user (while rendering with OptiX?) **Exact steps for others to reproduce the error:** 1. Create a new scene and change the render engine to Cycles (and change compute device to GPU Compute/OptiX?) 2. Select the default cube and duplicate it a few times (`Shift + D` and move it). 3. Enter rendered viewport mode. 4. Select one of the cubes, and navigate to the `Material Properties` tab in the `Properties` window and click on the `Make single user` button. ![image.png](https://archive.blender.org/developer/F9832498/image.png) 5. Attempt to change the materiel by doing something like change it's colour. Notice how this is **NOT** reflected in the viewport. This is not the case with older versions of Blender. Here is a screen recording of the issue. [material bug.mp4](https://archive.blender.org/developer/F9832044/material_bug.mp4)
Author

Added subscriber: @Hyesung

Added subscriber: @Hyesung
Hyesung changed title from Material not updated in viewport render. to Material not updated in Cycles viewport render. 2021-02-23 19:12:24 +01:00
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I just wanted to add, that upon further investigation this issue only seems to affect OptiX for me. CUDA and CPU rendering seem to be un-affected.

System Information:
Operating system: Linux-5.10.0-3-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: GeForce RTX 3070 460.39

Note: Something similar was reported in #85795 (cycles: after changing active camera during viewport rendering, the renderer must be restarted for material changes to take effect.)

Problem also seems to happen when renaming a material after after making the material single user.

However, I personally wasn't able to reproduce it with the file they provided.

I just wanted to add, that upon further investigation this issue only seems to affect OptiX for me. CUDA and CPU rendering seem to be un-affected. **System Information:** Operating system: Linux-5.10.0-3-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: GeForce RTX 3070 460.39 Note: Something similar was reported in #85795 (cycles: after changing active camera during viewport rendering, the renderer must be restarted for material changes to take effect.) > Problem also seems to happen when renaming a material after after making the material single user. However, I personally wasn't able to reproduce it with the file they provided.
Alaska changed title from Material not updated in Cycles viewport render. to Material not updated in Cycles viewport render when made single user (while rendering with OptiX?) 2021-02-23 21:35:13 +01:00
Member

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Member

CC @kevindietrich I believe this may be related to bbe6d44928 Not 100% sure.

CC @kevindietrich I believe this may be related to bbe6d44928 Not 100% sure.
Kévin Dietrich self-assigned this 2021-02-25 02:07:30 +01:00

This issue was referenced by 72370b92be

This issue was referenced by 72370b92be0db6c7726e1b74e73c393ed1d00538

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85926
No description provided.