Fix T85926: Cycles missing viewport updates when making materials single user

This issue seems to be caused by the reallocation flag not being set on
the device shader data array so it was never updated on the GPU although
the host memory was modified.